<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.rsparking.ui.client.addedit.AddEditClientViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rs_white"
        android:theme="@style/Theme.AppCompat.Light">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/txtName"
                    android:hint="@string/hint_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:ems="10"
                    android:text="@={viewModel.currentClient.name}"
                    android:inputType="textPersonName"
                    style="@style/rstand_form" />

                <EditText
                    android:id="@+id/txtPlate"
                    android:hint="@string/hint_plate_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/rstand_form"
                    android:ems="10"
                    android:text="@={viewModel.currentClient.plateNumber}"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:hint="@string/hint_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/rstand_form"
                    android:ems="10"
                    android:text="@={viewModel.currentClient.eMail}"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/txtPhoneNumber"
                    android:hint="@string/hint_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/rstand_form"
                    android:text="@={viewModel.currentClient.phone}"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/txtNotes"
                    android:hint="@string/notes_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/rstand_form"
                    android:gravity="bottom"
                    android:lines="6"
                    android:text="@={viewModel.currentClient.notes}"
                    android:inputType="textMultiLine"
                    android:textColor="@color/rs_black"
                    android:textColorHint="@color/rs_lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_rating"
                    style="@style/rstand_form"
                    android:background="@android:color/transparent" />

                <per.wsj.library.AndRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    app:starColor="@color/rs_yellow"
                    app:starDrawable="@drawable/ic_twotone_star_empty"
                    style="@style/ImageRatingBar"
                    android:rating="@={viewModel.currentClient.score}"
                    android:id="@+id/scoreBar" />
            </LinearLayout>
        </ScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/clientFab"
            android:onClick="@{() -> viewModel.onSaveEvent()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_save_button"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>