<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light">
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/rs_white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo_full" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginImage"
        android:drawableStart="@drawable/ic_face_black_24dp"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        style="@style/rstand_form" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/txtLogin"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_key_black_24dp"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/rstand_form"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        tools:layout_editor_absoluteX="99dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_background"
        android:text="@string/submit_button"
        android:textColor="@color/rs_white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_below="@id/txtPass"
        android:layout_centerInParent="true"/>

</RelativeLayout>
</layout>