<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="driverViewModel"
            type="com.example.rsparking.ui.driver.addedit.AddEditDriverViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rs_white"
        android:theme="@style/Theme.AppCompat.Light">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/imgPhoto"
                    android:clickable="true"
                    app:image="@{driverViewModel.currentdriver.image}"
                    android:onClick="@{()-> driverViewModel.onOpenCameraEvent()}"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/button_background"
                    android:elevation="10dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_camera_alt_black_24dp" />

                <EditText
                    android:id="@+id/txtName"
                    android:hint="@string/hint_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="81dp"
                    android:ems="10"
                    android:text="@={driverViewModel.currentdriver.name}"
                    android:inputType="textPersonName"
                    style="@style/rstand_form" />

                <EditText
                    android:id="@+id/txtLastName"
                    android:hint="@string/hint_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/rstand_form"
                    android:ems="10"
                    android:text="@={driverViewModel.currentdriver.lastName}"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:hint="@string/hint_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/rstand_form"
                    android:ems="10"
                    android:text="@={driverViewModel.currentdriver.eMail}"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/txtPhone"
                    android:hint="@string/hint_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/rstand_form"
                    android:text="@={driverViewModel.currentdriver.phone}"
                    android:inputType="phone" />
            </LinearLayout>
        </ScrollView>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/clientFab"
                android:onClick="@{() -> driverViewModel.onSaveEvent()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorAccent"
                android:src="@drawable/ic_save_button"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>